--- a/src/validation/03.2.2_compare_mean_meth.ipynb
+++ b/src/validation/03.2.2_compare_mean_meth.ipynb
@@ -593,9 +593,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Zoo_R",
+   "display_name": "R_compEpi",
    "language": "R",
-   "name": "zoo_r"
+   "name": "r_compepi"
   },
   "language_info": {
    "codemirror_mode": "r",
@@ -603,7 +603,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
