--- a/src/validation/02.3_summary_insilicoDigest.ipynb
+++ b/src/validation/02.3_summary_insilicoDigest.ipynb
@@ -29,13 +29,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Warning message:\n",
+      "“package ‘ggrepel’ was built under R version 3.6.3”\n",
+      "Warning message:\n",
+      "“package ‘ggseqlogo’ was built under R version 3.6.3”\n",
+      "Warning message:\n",
+      "“package ‘pheatmap’ was built under R version 3.6.3”\n",
       "Joining, by = \"species\"\n",
       "\n"
      ]
@@ -47,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -407,6 +413,34 @@
    "source": [
     "annot_df <- fread(file.path(output_dir, \"genomes_to_run.tsv\"))\n",
     "head(annot_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "76"
+      ],
+      "text/latex": [
+       "76"
+      ],
+      "text/markdown": [
+       "76"
+      ],
+      "text/plain": [
+       "[1] 76"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "NROW(annot_df)"
    ]
   },
   {
@@ -1685,6 +1719,133 @@
    "source": [
     "my_wt(summary_df, file.path(output_dir, \"summary_df.tsv\")) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary_df <- fread(file.path(output_dir, \"summary_df.tsv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "76"
+      ],
+      "text/latex": [
+       "76"
+      ],
+      "text/markdown": [
+       "76"
+      ],
+      "text/plain": [
+       "[1] 76"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "length(unique(summary_df$genome_id))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 9 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>class</th><th scope=col>n</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Actinopteri       </td><td> 8</td></tr>\n",
+       "\t<tr><td>Amphibia          </td><td> 3</td></tr>\n",
+       "\t<tr><td>Aves              </td><td> 7</td></tr>\n",
+       "\t<tr><td>Chondrichthyes    </td><td> 1</td></tr>\n",
+       "\t<tr><td>Invertebrata      </td><td> 5</td></tr>\n",
+       "\t<tr><td>Jawless_vertebrate</td><td> 1</td></tr>\n",
+       "\t<tr><td>Mammalia          </td><td>44</td></tr>\n",
+       "\t<tr><td>Marsupialia       </td><td> 3</td></tr>\n",
+       "\t<tr><td>Reptilia          </td><td> 4</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 9 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " class & n\\\\\n",
+       " <chr> & <int>\\\\\n",
+       "\\hline\n",
+       "\t Actinopteri        &  8\\\\\n",
+       "\t Amphibia           &  3\\\\\n",
+       "\t Aves               &  7\\\\\n",
+       "\t Chondrichthyes     &  1\\\\\n",
+       "\t Invertebrata       &  5\\\\\n",
+       "\t Jawless\\_vertebrate &  1\\\\\n",
+       "\t Mammalia           & 44\\\\\n",
+       "\t Marsupialia        &  3\\\\\n",
+       "\t Reptilia           &  4\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 9 × 2\n",
+       "\n",
+       "| class &lt;chr&gt; | n &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| Actinopteri        |  8 |\n",
+       "| Amphibia           |  3 |\n",
+       "| Aves               |  7 |\n",
+       "| Chondrichthyes     |  1 |\n",
+       "| Invertebrata       |  5 |\n",
+       "| Jawless_vertebrate |  1 |\n",
+       "| Mammalia           | 44 |\n",
+       "| Marsupialia        |  3 |\n",
+       "| Reptilia           |  4 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  class              n \n",
+       "1 Actinopteri         8\n",
+       "2 Amphibia            3\n",
+       "3 Aves                7\n",
+       "4 Chondrichthyes      1\n",
+       "5 Invertebrata        5\n",
+       "6 Jawless_vertebrate  1\n",
+       "7 Mammalia           44\n",
+       "8 Marsupialia         3\n",
+       "9 Reptilia            4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "unique(summary_df[,c(\"genome_id\", \"class\", \"ucsc_species\")]) %>% \n",
+    "    group_by(class) %>% summarize(n = n())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
